[metadata]
name = py65816
version = 0.0.0
author = Terrance Robertson
author_email = trobertson@trobertson.site
description = 65816 microprocessor simulation package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tmr4/py65816
project_urls =
    Bug Tracker = https://github.com/tmr4/py65816/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    = py65816
packages = find:
python_requires = >=3.6

[options.packages.find]
where = py65816

[options.entry_points]
    console_scripts =
        py65816mon = py65816.db_monitor:main
